# py-knights-fighting

./: .flake8  .gitignore  Knight_story_format.py  My_knights.py  README.md  Untitled.ipynb  battle.py  battles.py  calculate_states.py  championship.py  checklist.md  data.py  desktop.ini  fight.py  knight.py  knights.py  knights_class.py  main.py  output.txt  preparation.py  pyproject.toml  requirements.txt
Knights_data/: Knights.py  Stats.py
actions/: action.py  fight.py  fight_preparations.py  hero_manipulations.py
app/: Armour.py  Battle.py  BattleArena.py  Battles.py  Equipment.py  Game.py  Knight.py  Knight_class.py  Knights.py  KnightsManager.py  Potion.py  PotionEffect.py  Tournament.py  Try.py  Unit_equip.py  Weapon.py  __init__.py  accessories.py  action.py  actions.py  ammunition.py  apply.py  apply_armour_weapon_potion.py  apply_equipment.py  apply_potion.py  arena.py  armor.py  armour.py  batle_preparation.py  batlle_of_tournament.py  battle.py  battle_config.py  battle_func.py  battle_i.py  battle_info.py  battle_konfig.py  battle_module.py  battle_my.py  battle_prep.py  battle_preparation.py  (+181 more)
battle/: arena.py  battle.py  config.py  knight.py  knights_config.py  preparations.py
battles/: battle.py  preparation.py
beta/: knights_data.py
characters/: knight.py  knights.py
config/: knights.py
data/: knights_data.py
equipment/: armour.py  potions.py  weapons.py
equiption/: armour.py  potion.py
game/: __init__.py  battle.py  knight.py
items/: armour.py  items_init.py  potion.py  weapon.py
knight/: battle.py  knight.py  knights.py
(+1435 files in other folders)
