[project]
name = "src"
version = "0.1.0"
dependencies = [
    "pytest"
]

[tool.poetry]
name = "app"
version = "0.1.0"
packages = [{ include = "adapters", from = "src" },
            { include = "battle", from = "src" },
            { include = "config_dicts", from = "src" },
            { include = "fighters", from = "src" },
            { include = "item_system", from = "src" },
            { include = "utils", from = "src" }]



